--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <span class="date">Created August 12, 2016</span>
                 </div>
                 <div class="description">
-                    Playing with fire.
+                    Atar drawing using web optimized SVG technology
                 </div>
             </div>
         </div>
@@ -137,7 +137,7 @@
                     <span class="date">Created April 8, 2016</span>
                 </div>
                 <div class="description">
-                    Anthropomorphic Penguin
+                    Penguin drawing using web optimized SVG technology
                 </div>
             </div>
         </div>
@@ -322,7 +322,7 @@
             </div>
             <div class="description">
                 <div class="ui header">Atar</div>
-                <p>Design inspired by Atar which is the Zoroastrian concept of holy fire. This was an excersize in symmetry, smooth angles, proportions, gradients, cut-aways, additive shapes and symbolic interpretation. </p>
+                <p>Atar is the Zoroastrian symbol of holy fire. This was an excersize in web optimized SVG using symmetry, smooth angles, proportions, gradients, cut-aways and additive shapes. </p>
 
             </div>
         </div>
@@ -338,7 +338,7 @@
             </div>
             <div class="description">
                 <div class="ui header">Human Penguin</div>
-                <p>This was an excersize in anthropomorphic design giving a penguin human-like characteristics. Some of the concepts employed include symbolic interpretation, gradients, symmetry, proportions, and blending 3-D shapes with 2-D graphics.</p>
+                <p>Penguins are the symbol of linux my favorite operating system. Some of the concepts used in this drawing include web optimized SVG graphics, gradients, symmetry and proportions.</p>
             </div>
         </div>
     </div>
