--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     <span class="date">Created June 4, 2015</span>
                 </div>
                 <div class="description">
-                    A swordman image for blog entry at www.cupofcrypto.com
+                    A swordman drawing for blog entry at www.cupofcrypto.com
                 </div>
             </div>
         </div>
@@ -433,7 +433,7 @@
             </div>
             <div class="description">
                 <div class="ui header">Ethereum</div>
-                <p>An Ethereum advertisement for meetups</p>
+                <p>An Ethereum advertisement for meetups made in GIMP featuring layers, composition and color manipulation.</p>
             </div>
         </div>
     </div>
@@ -448,7 +448,7 @@
             </div>
             <div class="description">
                 <div class="ui header">Swordman</div>
-                <p>A Swordman image for blog entry at www.cupofcrypto.com</p>
+                <p>A Swordman drawing for blog entry at www.cupofcrypto.com using stylus and GIMP</p>
             </div>
         </div>
     </div>
@@ -463,7 +463,7 @@
             </div>
             <div class="description">
                 <div class="ui header">John Titor</div>
-                <p>An image for John Titor blog entry at www.cupofcrypto.com</p>
+                <p>An image for John Titor blog entry at www.cupofcrypto.com made in GIMP featuring layers, gradients and alpha blending</p>
             </div>
         </div>
     </div>
